--- a/src/Components/Mainpage/Todo.css
+++ b/src/Components/Mainpage/Todo.css
@@ -1,5 +1,5 @@
 .title-width {
-  width: 20%;
+  width: 15%;
   text-align: center;
 }
 .description-width {
@@ -7,14 +7,62 @@
   text-align: center;
 }
 .before-width {
-  width: 25%;
+  width: 20%;
   text-align: center;
 }
-.delete-width {
-  width: 10%;
+.status-width {
+  width: 20%;
   text-align: center;
 }
 .options-width {
   width: 20%;
   text-align: center;
+}
+
+table {
+  border: 1px solid;
+}
+
+table thead {
+  font-weight: bold;
+}
+
+table tbody {
+  height: 72vh;
+  overflow-y: auto;
+}
+
+table tr {
+  display: table;
+  width: 100%;
+  table-layout: fixed;
+}
+
+table td {
+  vertical-align: top;
+}
+
+table td .actions {
+  float: right;
+}
+
+table td .actions svg {
+  cursor: pointer;
+  margin: 5px;
+}
+
+table .loading-row {
+  text-align: center;
+  font-size: 1em;
+  padding-top: 3em;
+}
+.todo {
+  align-items: center;
+  display: flex;
+  font-size: 18px;
+  justify-content: space-between;
+}
+
+.card-body {
+  padding: 0px !important;
 }
