--- a/src/Components/Signup/Signup.css
+++ b/src/Components/Signup/Signup.css
@@ -1,4 +1,3 @@
-
 .Login {
   padding: 60px 0;
 }
@@ -15,17 +14,22 @@
   background-color: white;
   border-radius: 10px;
 }
-.navbar-brand{
+.navbar-brand {
   font-size: 50px;
 }
-.navbar{
+.navbar {
   border-radius: 10px;
 }
-.button-style{
+.button-style {
   display: flex;
   justify-content: center;
   margin-top: 10px;
 }
 .back-btn {
   margin-left: 10px;
+}
+
+.error-handle {
+  margin-top: 10px;
+  text-align: center;
 }
