--- a/src/Components/store/Navbar.css
+++ b/src/Components/store/Navbar.css
@@ -8,5 +8,56 @@ h6 {
 }
 
 .btn {
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.navbar-collapse {
+  justify-content: space-between !important;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  margin-right: 10px;
   margin-left: 10px;
+}
+
+.dropdown-content {
+  justify-content: center;
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 120px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content > div {
+  padding: 10px;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.nav-link {
+  color: black !important;
+}
+
+.nav-link:hover {
+  background-color: #beb7b7 !important;
+  border-radius: 5px;
+}
+
+.nav {
+  display: block;
+  padding: 0.5rem 0.5rem !important;
+  color: black !important;
+  text-decoration: none;
+  transition: color 0.15s ease-in-out;
+  background-color: 0.15s ease-in-out;
+  border-color: 0.15s ease-in-out;
+  background-color: #beb7b7;
+  border-radius: 5px;
 }
